test/spec_vectors/local_set/fail/module_17.wat
(module (func $type-param-arg-empty-vs-num-in-return (param i32) (return (local.set 0))))